# advent-of-code

./: README.md  stats
2019/: .gitignore  Makefile  lib
2019/1/: main
2019/10/: main
2019/12/: Cargo.toml  day12-desc
2019/12/src/: main.rs
2019/14/: desc
2019/14/src/: main.rs
2019/16/: Cargo.toml
2019/16/src/: main.rs
2019/18/: S-18  main.js  simple  simplify.js  testout.txt
2019/2/: Cargo.toml  day17  desc-day17  desc-day19  desc-day2  desc-day21  desc-day5  map-day15  map-day25  solution-day17  stdin-day13
2019/2/src/: ascii.rs  d2.rs  day11.rs  day13.rs  day15.rs  day17.rs  day19.rs  day2.rs  day20.rs  day21.rs  day23.rs  day24.rs  day25.rs  day5.rs  day7.rs  day9.rs  grid.rs  io.rs  lib.rs  main.rs  parse.rs
2019/22/: .gitignore  Cargo.toml
2019/3/: main.js
2019/4/: main
2019/6/: main
2019/8/: main.js
2019/util/: permutations.rs
2020/: Cargo.toml  Cargo.toml_2  lib.pl  notes.txt
2020/1/: 1.pl
2020/10/: Cargo.toml
2020/11/: Cargo.toml
2020/12/: Cargo.toml
2020/13/: Cargo.toml  mul.pl
2020/14/: Cargo.toml
2020/15/: Cargo.toml
2020/16/: Cargo.toml
2020/17/: Cargo.toml
2020/18/: Cargo.toml
2020/19/: Cargo.toml
2020/2/: 2.pl
2020/20/: 20.py  Cargo.toml
2020/21/: Cargo.toml
2020/23/: Cargo.toml
2020/24/: Cargo.toml
2020/25/: Cargo.toml
2020/3/: 1.pl
2020/4/: 1.pl
2020/5/: Cargo.toml
2020/6/: Cargo.toml
2020/7/: Cargo.toml
2020/8/: Cargo.toml  eg.txt
2020/9/: Cargo.toml
2021/: Cargo.toml
2021/d1/: main.pl
2021/d15/: Cargo.toml
2021/d18/: Cargo.toml
2021/d19/: Cargo.toml
(+47 files in other folders)
