[package]
name = "intcode"
version = "0.1.0"
authors = ["Rob Pilling <robpilling@gmail.com>"]
edition = "2018"

[dependencies]

[lib]
name = "intcode"
path = "src/lib.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[[bin]]
name = "day19"
path = "src/day19.rs"
